--- a/css/agency.css
+++ b/css/agency.css
@@ -618,7 +618,7 @@ section h3.section-subheading {
     }
 
     .timeline>li.timeline-inverted>.timeline-panel {
-        padding: 0 100px 20px 20px;
+        /*padding: 0 100px 20px 20px;*/
     }
 }
 
